--- a/src/main/resources/panl-results/static/panl.css
+++ b/src/main/resources/panl-results/static/panl.css
@@ -50,8 +50,9 @@ div#footer p { text-align: center; text-justify: none }
 
 #timings { padding-top: 12px; border-top: 1px solid #efefef; }
 
-input { width: 50%; }
-input, button { font-family: "Libre Baskerville", serif; padding: 4px; }
+input#searchfield { width: 50%; }
+input, button, select { font-family: "Libre Baskerville", serif; padding: 4px; }
+input.date_number { width: 10%; margin: 0 8px; }
 
 /* styling of the nouislider and ranges */
 #ranges { padding: 0 14px; }
