--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2785,7 +2785,7 @@
 	#banner {
 		padding: 11em 0 8em 0 ;
 		background-attachment: scroll, fixed;
-		background-image: url("images/overlay.png"), url("../../images/banner.jpg");
+		background-image: url("images/overlay.png"), url("/panl/images/banner.jpg");
 		background-position: center center;
 		background-size: cover;
 		line-height: 2;
