--- a/src/main/resources/webapp/static/panl.css
+++ b/src/main/resources/webapp/static/panl.css
@@ -5,6 +5,8 @@ h1, h2, form, p { padding: 0 10px;}
 h2 { font-size: 14px; font-style: italic; font-weight: 400; }
 
 a:link, a:visited, a:hover, a:active { color: blue; }
+img.add, img.remove, img.invert { margin-bottom: -6px;}
+a.invert { color: #070a9b; text-decoration: none; background: #070a9b2e; padding: 2px 4px; border-radius: 6px; margin: 2px;}
 
 p { line-height: 1.8; text-align:justify; text-justify:auto; }
 p.info { line-height: 1.4; font-size: 12px; font-style: italic; }
@@ -41,7 +43,7 @@ div#navigation li { list-style: none; }
 dl { border-top: 1px solid black; padding: 14px 10px; margin: 0; }
 dt { font-weight: bold; }
 dd { padding-bottom: 3px; }
-#documents p { text-justify: none }
+#documents p { text-justify: unset; }
 
 div.padding { padding-bottom: 14px;}
 .range-link { text-align: center; position: relative; z-index: 1; }
@@ -49,7 +51,7 @@ div.padding { padding-bottom: 14px;}
 
 /* footer */
 div#footer { border-top: 1px solid #afafaf; margin: 84px auto 0 auto; padding: 6px 0; background-color: #efefef; clear: both; position: relative; height: 80px; margin-top: -80px; width: 1024px; }
-div#footer p { text-align: center; text-justify: none }
+div#footer p { text-align: center; text-justify: unset; }
 
 #timings { padding-top: 12px; border-top: 1px solid #efefef; }
 
@@ -60,10 +62,10 @@ input.date_number { width: 10%; margin: 0 8px; text-align: right; }
 
 /* styling of the nouislider and ranges */
 #ranges { padding: 0 14px; }
-#ranges p { font-weight: bold; padding-left: 0px; }
+#ranges p { font-weight: bold; padding-left: 0; }
 
 .slider-round { height: 8px; border-radius: 16px; }
-.noUi-value-horizontal { padding: 4px 0 0 0px; }
+.noUi-value-horizontal { padding: 4px 0 0 0; }
 .noUi-horizontal .noUi-handle { border-radius: 100%; width: 22px; background: white; border: 4px solid black; height: 22px; margin-top: -2px; margin-right: 5px; }
 .noUi-handle::after, .noUi-handle::before { background: none; }
 .noUi-connect { background: #afafaf;}
