--- a/src/main/resources/webapp/static/panl.css
+++ b/src/main/resources/webapp/static/panl.css
@@ -1,6 +1,6 @@
 /* basic formatting */
 body { min-height: 100%; }
-html, body { margin: 0; padding: 0; font-family: "Libre Baskerville", serif; font-weight: 400; font-style: normal; }
+html, body { margin: 0; padding: 0; font-family: "Libre Baskerville", serif; font-weight: 400; font-style: normal; font-size: 12pt;}
 h1, h2, form, p { padding: 0 10px;}
 h2 { font-size: 14px; font-style: italic; font-weight: 400; }
 
@@ -8,6 +8,14 @@ a:link, a:visited, a:hover, a:active { color: blue; }
 img.add, img.remove, img.invert { margin-bottom: -6px;}
 a.invert { color: #070a9b; text-decoration: none; background: #070a9b2e; padding: 2px 4px; border-radius: 6px; margin: 2px;}
 
+ul#active li strong {
+    margin: 15px 0 4px 0;
+    border: 1px solid lightgray;
+    border-left: 6px solid lightgray;
+    display: block;
+    padding-left: 4px;
+    background-color: #efefef80;
+}
 p { line-height: 1.8; text-align:justify; text-justify:auto; }
 p.info { line-height: 1.4; font-size: 12px; font-style: italic; }
 p.tight { margin-bottom: 2px; padding-bottom: 2px; }
@@ -35,6 +43,8 @@ div#content { float: right; width: 700px; }
 /* navigation */
 div#navigation { margin-bottom: 104px; float: left; width: 300px; }
 div#navigation li { list-style: none; }
+div#navigation li.heading { border-top: 2px dotted dimgray; padding: 10px 0 10px 0; }
+div#navigation li.heading:nth-child(odd) { background-color: #fafafa; }
 .navheading { background-color: #efefef; border-left: 6px solid black; }
 
 /* document (i.e. results) list */
