--- a/src/main/resources/webapp/static/panl.css
+++ b/src/main/resources/webapp/static/panl.css
@@ -1,12 +1,14 @@
 /* basic formatting */
 body { min-height: 100%; }
-html, body { margin: 0; padding: 0; font-family: "Libre Baskerville", serif; font-weight: 400; font-style: normal; font-size: 12pt;}
+html, body { margin: 0; padding: 0; font-family: "Libre Baskerville", serif; font-weight: 400; font-style: normal; font-size: 12pt; }
 h1, h2, form, p { padding: 0 10px;}
 h2 { font-size: 14px; font-style: italic; font-weight: 400; }
 
 a:link, a:visited, a:hover, a:active { color: blue; }
+#navigation a:link, #navigation a:visited, #navigation a:hover, #navigation a:active { color: #252525; }
 img.add, img.remove, img.invert { margin-bottom: -6px;}
-a.invert { color: #070a9b; text-decoration: none; background: #070a9b2e; padding: 2px 4px; border-radius: 6px; margin: 2px;}
+a.invert { color: #070a9b; text-decoration: none; background: #070a9b2e; padding: 2px 4px; border-radius: 6px; margin: 2px; }
+a img { padding-right: 4px; }
 
 ul#active li strong { margin: 15px 0 4px 0; border: 1px solid lightgray; border-left: 6px solid lightgray; display: block; padding-left: 4px; background-color: #efefef80; }
 
