--- a/src/main/resources/webapp/static/panl.css
+++ b/src/main/resources/webapp/static/panl.css
@@ -12,6 +12,7 @@ a img { padding-right: 4px; }
 
 ul#active li strong { margin: 15px 0 4px 0; border: 1px solid lightgray; border-left: 6px solid lightgray; display: block; padding-left: 4px; background-color: #efefef80; }
 
+dt em, dd em { font-style: normal; border: 2px solid black; padding: 0 4px; margin: 4px; background-color: #000; color: #fff; border-radius: 8px; }
 p { line-height: 1.8; text-align:justify; text-justify:auto; }
 p.info { line-height: 1.4; font-size: 12px; font-style: italic; }
 p.tight { margin-bottom: 2px; padding-bottom: 2px; }
