--- a/src/main/resources/webapp/static/panl.css
+++ b/src/main/resources/webapp/static/panl.css
@@ -9,12 +9,13 @@ a:link, a:visited, a:hover, a:active { color: blue; }
 img.add, img.remove, img.invert { margin-bottom: -6px;}
 a.invert { color: #070a9b; text-decoration: none; background: #070a9b2e; padding: 2px 4px; border-radius: 6px; margin: 2px; }
 a img { padding-right: 4px; }
-
+#heading { background-color: #efefef; border-bottom: 1px solid #afafaf; padding: 6px 0;}
 ul#active li strong { margin: 15px 0 4px 0; border: 1px solid lightgray; border-left: 6px solid lightgray; display: block; padding-left: 4px; background-color: #efefef80; }
-ul#available li ul {
-    max-height: 240px;
-    overflow: auto;
+ul#available li ul { max-height: 240px; overflow: auto; border-top: 1px solid #a5a5a5; margin-top: 4px; padding-top: 6px;
 }
+
+#collection_holder { display: none; }
+
 dt em, dd em { font-style: normal; border: 2px solid black; padding: 0 4px; margin: 4px; background-color: #000; color: #fff; border-radius: 8px; }
 p { line-height: 1.8; text-align:justify; text-justify:auto; }
 p.info { line-height: 1.4; font-size: 12px; font-style: italic; }
@@ -41,7 +42,6 @@ div#container { width: 1024px; margin: 0 auto; }
 div#content { float: right; width: 700px; }
 
 /* navigation */
-div#navigation { margin-bottom: 104px; float: left; width: 300px; }
 div#navigation li { list-style: none; }
 div#navigation li.heading { border-top: 2px dotted dimgray; padding: 10px 0 10px 0; }
 div#navigation li.heading:nth-child(odd) { background-color: #fafafa; }
@@ -49,7 +49,7 @@ div#navigation li.heading:nth-child(odd) { background-color: #fafafa; }
 
 #search-checkboxes { padding-top: 10px; }
 #search-checkboxes p { padding: 0; margin: 0; }
-
+.Cell:first-child {padding-right: 12px; }
 /* document (i.e. results) list */
 #documents dl:nth-child(odd) { background-color: #efefef; }
 #documents { margin-bottom: 12px; }
