--- a/src/main/resources/webapp/static/panl.css
+++ b/src/main/resources/webapp/static/panl.css
@@ -47,8 +47,17 @@ div#navigation li.heading { border-top: 2px dotted dimgray; padding: 10px 0 10px
 div#navigation li.heading:nth-child(odd) { background-color: #fafafa; }
 .navheading { background-color: #efefef; border-left: 6px solid black; }
 
-#search-checkboxes { padding-top: 10px; }
-#search-checkboxes p { padding: 0; margin: 0; }
+#qop, #search-checkboxes {
+    margin-top: 8px;
+    padding-left: 6px;
+    border-left: 4px double black;
+}
+#qop p, #search-checkboxes p {
+    font-weight: bold;
+    padding-left: 0;
+    margin-bottom: 4px;
+    margin-top: 4px;
+}
 .Cell:first-child {padding-right: 12px; }
 /* document (i.e. results) list */
 #documents dl:nth-child(odd) { background-color: #efefef; }
@@ -69,7 +78,7 @@ div#footer p { text-align: center; text-justify: unset; }
 #timings { padding-top: 12px; border-top: 1px solid #efefef; }
 
 /* inputs */
-input#searchfield { width: 50%; }
+input#searchfield { width: 80%; }
 input, button, select { font-family: "Libre Baskerville", serif; padding: 4px; }
 input.date_number { width: 10%; margin: 0 8px; text-align: right; }
 
